--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,22 +10,23 @@
   },
   "dependencies": {
     "@smartattend/types": "file:../../packages/types",
+    "axios": "^1.6.0",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "zustand": "^4.4.0",
-    "axios": "^1.6.0",
-    "lucide-react": "^0.263.1",
-    "framer-motion": "^10.16.0"
+    "recharts": "^3.7.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.7.0",
-    "typescript": "^5.3.0",
-    "vite": "^5.0.0",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0"
   }
 }
